--- a/minik.client/src/pages/ListingPage.css
+++ b/minik.client/src/pages/ListingPage.css
@@ -23,5 +23,25 @@
 }
 
 .card {
+    
     min-height: 100%;
+    
 }
+.card:hover
+ {
+    transform: scale(1.02);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+    cursor:pointer;
+  }
+  
+
+.card-body {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%; /* Kart içeriğinin tam ortalanmasını sağlar */
+  }
+  
