--- a/minik.client/src/styles/App.css
+++ b/minik.client/src/styles/App.css
@@ -85,7 +85,7 @@ body {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-50%);
+    transform: translateX(-100%);
   }
 }
 
@@ -105,20 +105,20 @@ body {
   position: absolute;
   width: 200%;
   height: 100%;
-  animation: wave 10s -3s linear infinite;
+  animation: wave 10s  linear infinite;
   transform: translate3d(0, 0, 0);
   opacity: 0.8;
 }
 
 .wave:nth-of-type(2) {
   bottom: 0;
-  animation: wave 18s linear reverse infinite;
+  animation: wave 8s linear reverse infinite;
   opacity: 0.5;
 }
 
 .wave:nth-of-type(3) {
   bottom: 0;
-  animation: wave 20s -1s linear infinite;
+  animation: wave 12s linear infinite;
   opacity: 0.5;
 }
 
