--- a/minik.client/src/styles/Navi.css
+++ b/minik.client/src/styles/Navi.css
@@ -1,5 +1,5 @@
-.navbar-custom {
-  background:"transparent";
+﻿.navbar-custom {
+  background:transparent;
   height: 100px;
   padding: 0 20px;
   z-index: 1000;
