fixed issue of calendar. Added trigger now if a tiny house been created then a mock reservation and maintenance created with it. Its for logic of calendar. Fixed some css bugs. Added SP Database and now sp is using while get tinyhouses. It's check availiabity range is fitting current date or not.

--- a/minik.client/src/styles/Filter.css
+++ b/minik.client/src/styles/Filter.css
@@ -61,6 +61,11 @@ font-size: 12px;
     cursor: pointer;
     margin-right: 10px;
   }
+
+  .filter-toggle-btn:hover {
+    background-color: rgba(0, 0, 0, 0.1); /* Hover efekti */
+    border-radius: 5px; /* Köşe yuvarlama */
+  }
   
   .navbar input[type="text"],
   .navbar select {
